# Taller-de-Programacion

TP0_ONBOARDING/apuntes-de-catedra/GoodCode/: wordscounter.h
TP0_ONBOARDING/material-de-catedra/GoodCode/: main.cpp  wordscounter.cpp
TP0_ONBOARDING/onboarding-2023c2-Tinchocw/: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  main.cpp  tp  wordscounter.cpp  wordscounter.h
TP1_SOCKETS/material-de-catedra/clases_servidor/: main.cpp
TP1_SOCKETS/material-de-catedra/cuestionario_de_sockets/: CMakeLists.txt  main.cpp
TP1_SOCKETS/material-de-catedra/prueba_archivos/: CMakeLists.txt  escenarios.txt  escenarios_basico.txt  main.cpp  mapas
TP1_SOCKETS/material-de-catedra/prueba_casteo/: CMakeLists.txt  main.cpp  prueba
TP1_SOCKETS/material-de-catedra/prueba_mov_semantics/: CMakeLists.txt  main.cpp
TP1_SOCKETS/material-de-catedra/sockets-en-cpp/: echo_server.cpp
TP1_SOCKETS/sockets-2023c2-Tinchocw/: README.md  client_cliente.cpp  client_cliente.h  client_interprete.cpp  client_interprete.h  client_main.cpp  client_protocolo_cliente.cpp  client_protocolo_cliente.h  common_printer.cpp  common_printer.h  common_sockets.cpp  server_controlador_de_comandos.cpp  server_controlador_de_comandos.h  server_gusano.cpp  server_gusano.h  server_juego.cpp  server_juego.h  server_main.cpp  server_protocolo_servidor.cpp  server_protocolo_servidor.h  server_servidor.cpp  server_servidor.h
TP2_THREADS/material-de-catedra/hands-on-threads/: 11_blocking_queue_with_conditional_variables.cpp
TP2_THREADS/material-de-catedra/stdin_prueba/: CMakeLists.txt  main.cpp
TP2_THREADS/material-de-catedra/threads/tutorial-interactivo/: 08_monitor_interface_critical_section.cpp
TP2_THREADS/threads-2023c2-Tinchocw/: CMakeLists.txt
TP2_THREADS/threads-2023c2-Tinchocw/threads-2023c2-Tinchocw/: README.md  client_cliente.cpp  client_cliente.h  client_interprete.cpp  client_interprete.h  client_main.cpp  client_protocol.cpp  client_protocol.h  common_constantes_protocolo.h  common_printer.cpp  common_printer.h  common_queue.cpp  common_queue.h  common_thread.cpp  common_thread.h  server_aceptador.cpp  server_aceptador.h  server_jugador.cpp  server_jugador.h  server_main.cpp  server_monitor_de_queues.cpp  server_monitor_de_queues.h  server_protocol.cpp  server_protocol.h  server_receiver.cpp  server_receiver.h  server_sender.cpp  server_sender.h  server_servidor.cpp  server_servidor.h
TP3_FINAL/TPG-Taller-Worms2D/: .gitignore  CMakeLists.txt  README.md  install.sh  worms2D.sh  worms2Dserver.sh
TP3_FINAL/TPG-Taller-Worms2D/client/: Action.cpp  Action.h  ActorHolder.cpp  ActorHolder.h  AimAnimation.cpp  AimAnimation.h  Animation.cpp  Animation.h  GameActor.h  LevelActors.h  SpecialToolAnimation.h  TeamResourcesHolder.cpp  TeamResourcesHolder.h  TerrainHolder.cpp  TerrainHolder.h  TexturesPool.cpp  TexturesPool.h  ToolAnimationHolder.cpp  ToolAnimationHolder.h  WeaponAnimationHolder.cpp  WeaponAnimationHolder.h  Window.cpp  Window.h  audio_player.cpp  audio_player.h  camera.cpp  camera.h  cheatmenu.cpp  cheatmenu.h  cheatmenu.ui  client_event_loop.cpp  client_event_loop.h  cparser.cpp  cparser.h  cprotocol.cpp  cprotocol.h  creceiver.cpp  creceiver.h  csender.cpp  csender.h  (+18 more)
TP3_FINAL/TPG-Taller-Worms2D/client/resources/: cheat_images.qrc  images.qrc  sounds.qrc
TP3_FINAL/TPG-Taller-Worms2D/common/: States.cpp  States.h  config.cpp  config.h  const.h  liberror.cpp  logger.cpp  logger.h  queue.h  resolver.cpp  resolvererror.cpp  socket.cpp  thread.h
TP3_FINAL/TPG-Taller-Worms2D/docs/: formatos.md
TP3_FINAL/TPG-Taller-Worms2D/docs/diagrams/: comms.plantuml  projectileTimer.plantuml  recvAction.plantuml
TP3_FINAL/TPG-Taller-Worms2D/server/: Game.cpp  Game.h  Player.cpp  Player.h  acceptor.cpp  acceptor.h  bar.cpp  bar.h  battlefield.cpp  battlefield.h  broadcaster.cpp  broadcaster.h  contact_listener.cpp  contact_listener.h  crate.cpp  crate.h  crate_type.cpp  crate_type.h  engine.cpp  engine.h  entity.cpp  entity.h  gadget.cpp  gadget.h  game_browser.cpp  game_browser.h  game_loop.cpp  game_loop.h  info_parser.cpp  info_parser.h  level_holder.cpp  level_holder.h  main.cpp  player_action.cpp  player_action.h  proyectile.cpp  proyectile.h  query_callback.cpp  query_callback.h  sclient.cpp  (+17 more)
TP3_FINAL/TPG-Taller-Worms2D/test/: protocol_test.cpp
TP3_FINAL/TPG-Taller-Worms2D/yaml/: client_const.yaml  common_const.yaml  level-bars.yaml  player_names.yaml  server_const.yaml  spawn_points.yaml
